Fixed space on smaller screens

--- a/src/sass/components/_projects-r.scss
+++ b/src/sass/components/_projects-r.scss
@@ -21,7 +21,7 @@
         transform: translate(0);
         .project {
             width: 100%;
-            margin: 0 0 2.5% 0;
+            margin: 0 0 3rem 0;
         }
     }
 }
